appId: com.anonymous.ichiro
---
- evalScript: ${output.achievementVersion = VERSION}
- assertVisible:
    id: "achievement-dog-${VERSION}"
- assertNotVisible:
    id: "achievement-dog-${OTHER}"
- repeat:
    times: 3
    commands:
      - tapOn: "ワンちゃん"
      - waitForAnimationToEnd:
          timeout: 1000
      - assertVisible:
          id: "achievement-dog-${VERSION}"
      - assertNotVisible:
          id: "achievement-dog-${OTHER}"
